Fix card sizes on mobile devices

--- a/src/features/donations/components/DonationCard/DonationCard.module.scss
+++ b/src/features/donations/components/DonationCard/DonationCard.module.scss
@@ -4,7 +4,8 @@
   @apply p-6 rounded-lg bg-white;
 
   box-shadow: $shadow;
-  max-width: 25rem;
+  height: fit-content;
+  max-width: 20rem;
   position: relative;
 
   .options {
